[project]
name = "dppd"
version = "0.30"
description = "A pythonic dplyr clone"
readme = "README.md"
requires-python = ">=3.9"
authors = [
	{name = "Florian Finkernagel", email = "finkernagel@imt.uni-marburg.de"}
]
license="MIT"
dependencies = [
    "natsort",
    "numpy",
	"pandas>=2",
    "wrapt",
]

[project.urls]
Documentation = "https://dppd.readthedocs.io/en/latest/"
Repository = "https://github.com/TyberiusPrime/dppd"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
	dev = [
	"build",
    "numpydoc",
	"plotnine",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-bootstrap-theme",
]

[tool.pytest.ini_options]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = """
    --cov dppd --cov-report term-missing
    --verbose
"""
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = "tests"
filterwarnings = [
    "ignore:::statsmodels.base.wrapper:100",
    "ignore:::patsy.constraint:13",
    "ignore:::matplotlib.backends.backend_wx:",
]

