# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = dppd
description = A pythonic dplyr clone
version=0.27
author = Florian Finkernagel
author_email = finkernagel@imt.uni-marburg.de
license = mit
url = https://github.com/TyberiusPrime/dppd
long_description = file: README.md
long_description_content_type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# Add here dependencies of your project (semicolon/line-separated), e.g.
python_requires = >= 3.6
install_requires = 
    pandas>=0.22
    numpy
    natsort
    wrapt
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install dppd[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    plotnine
    pandas<2.0
	flake8

doc = 
    sphinx
    sphinx-bootstrap-theme
    numpydoc
    pandas

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = dppd.module:function
# For example:
# console_scripts =
#     fibonacci = dppd.skeleton:run
# And any other entry points, for example:

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov dppd --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
filterwarnings = 
    ignore:::statsmodels.base.wrapper:100
    ignore:::patsy.constraint:13
    ignore:::matplotlib.backends.backend_wx:


[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-line-length=88
ignore = E501, E713

